--- a/dev/main/blocks/about/about.pug
+++ b/dev/main/blocks/about/about.pug
@@ -32,14 +32,20 @@
 			h2.about__numTitle.title__main Here’re some impressive numbers about us
 			.numPanel
 				.about__numItem.numItem
-					.numItem__val 7533
+					.numItem__val#num 
+						span.numItem__valNum 753
 					p.numItem__text.text Project Complate
 				.about__numItem.numItem
-					.numItem__val 4222
+					.numItem__val 
+						span.numItem__valNum 422
 					p.numItem__text.text On Going Project
 				.about__numItem.numItem
-					.numItem__val 6980 +
+					.numItem__val 
+						span.numItem__valNum 698
+						span +
 					p.numItem__text.text Happy Client
 				.about__numItem.numItem
-					.numItem__val 100%
+					.numItem__val 
+						span.numItem__valNum 100
+						span %
 					p.numItem__text.text Positive Feedback
