--- a/dev/main/blocks/gallery/gallery.pug
+++ b/dev/main/blocks/gallery/gallery.pug
@@ -37,7 +37,7 @@
 				"text": "Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum."
 			},
 			{
-				"title": "Outsourcing",
+				"title": "Business",
 				"slider": ["Slide1 text", "Slide2 text", "Slide3 text", "Slide4 text", "Slide5 text"],
 				"text": "Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum."
 			}
