--- a/dev/main/blocks/form/form.pug
+++ b/dev/main/blocks/form/form.pug
@@ -19,7 +19,7 @@
 				"text": "Send",
 				"icon": "load"
 			})(class = "form__btn btn_color_main btn_textTransform" type="submit" id="contactFormBtn")
-		.contactBlock__callback.callback
+		.contactBlock__callback.callback#callback
 			.callback__wrap.callback__wrap_success
 				.callback__item.callback__item_success
 					button.callback__closeBtn.closeBtn Close pop up
