--- a/dev/main/blocks/gallery/__portfolioItem/_portfolioItem.sass
+++ b/dev/main/blocks/gallery/__portfolioItem/_portfolioItem.sass
@@ -1,22 +1,12 @@
 .portfolioItem
-  width: 90%
-  box-sizing: border-box
   font-size: .5rem
-  //margin: 0 auto
-  //position: relative
-  +paddingEm(30px, 30px, 30px, 30px)
+  padding: 1.875rem 1.875em
+  box-sizing: border-box
   border: 2px solid $mainColor
   background-color: #fff
-  +xs-block
-    width: 80%
-    font-size: .7rem
-  +sm-block
-    width: 60%
-    font-size: 1rem
-  +lg-block
-    font-size: 1.3rem
   &__title
-    +marginEm(0, 0, 30px, 0)
+    font-size: 1rem
+    +marginRem(0, 0, 30px, 0)
   &__slider
     width: 100%
 
@@ -78,6 +68,7 @@
           background-image: url(../../static/img/content/portfolio/prev5-1720w.jpg)
 
   &__text
+    font-size: 1rem
     text-align: center
     color: $textColorBlack
   &__close
