--- a/dev/main/blocks/gallery/_gallery.sass
+++ b/dev/main/blocks/gallery/_gallery.sass
@@ -2,6 +2,7 @@
   +paddingRem(64px, 0, 65px, 0)
   text-align: center
   position: relative
+  overflow: hidden
   +xs-block
 		padding-bottom: 5.03rem
   +sm-block
@@ -25,12 +26,47 @@
     margin-top: 1.5rem
 
   &__slideItem
-    position: absolute
+    width: 90%
+    position: fixed
     top: 50%
     left: 50%
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -50%) scale(0.001)
     z-index: 3000
     display: none
+    opacity: 0
+    transition: all .6s
+    &_visible
+      opacity: 1
+      transform: translate(-50%, -50%) scale(1)
+    +xs-block
+      width: 80%
+      font-size: .7rem
+    +sm-block
+      width: 60%
+      font-size: 1rem
+    +lg-block
+      font-size: 1.3rem
+  &__drop-wrapper
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    z-index: 2000
+  &__drop
+    position: fixed
+    transition: transform .5s cubic-bezier(.25,1,.60,1), opacity 1.5s cubic-bezier(.25,1,.60,1), transform-origin 0s
+    transform: scale(0.001)
+    transform-origin: 50% 50%
+    opacity: 1
+    width: 100px
+    height: 100px
+    border-radius: 50%
+    background-color: $mainColor
+  &_active
+    .portfolio__drop
+      transform: scale(6)
+      opacity: 0
 .portfolioPrev
   width: 100%
   height: 100%
@@ -77,7 +113,7 @@
     @media (min-resolution: 192dpi)
       background-image: url(../../static/img/content/portfolio/prev7-966w-2x.jpg)
 
-  &_outsourcing
+  &_business
     background: url(../../static/img/content/portfolio/prev8-483w.jpg) center no-repeat
     background-size: cover
     @media (min-resolution: 192dpi)
@@ -99,7 +135,7 @@
     text-transform: uppercase
     position: relative
   &__controls
-        width: 96px
+        width: 72px
         height: 20px
         border: 1px solid $borderColor
         position: absolute
@@ -117,12 +153,8 @@
     border-radius: 100%
     position: absolute
     bottom: -22px
+    left: 50%
+    margin-left: -17px
+    border: 1px solid $borderColor
+    background-color: $mainColor
     cursor: pointer
-    &_view
-      right: 9px
-      border: 1px solid $borderColor
-      background-color: $mainColor
-    &_link
-      left: 9px
-      border: 1px solid #000
-      background-color: $textColorLight
