--- a/dev/main/blocks/about/about.pug
+++ b/dev/main/blocks/about/about.pug
@@ -30,22 +30,22 @@
 				div.advantage__title Powerful security
 		section.about__numbers
 			h2.about__numTitle.title__main Here’re some impressive numbers about us
-			.numPanel
-				.about__numItem.numItem
-					.numItem__val#num 
-						span.numItem__valNum 753
-					p.numItem__text.text Project Complate
-				.about__numItem.numItem
-					.numItem__val 
-						span.numItem__valNum 422
-					p.numItem__text.text On Going Project
-				.about__numItem.numItem
-					.numItem__val 
-						span.numItem__valNum 698
+			.numPanel#numPanel
+				.numPanel__item
+					.numPanel__val
+						span.numPanel__numeric(data-count="753") 0
+					p.numPanel__text.text Project Complate
+				.numPanel__item
+					.numPanel__val 
+						span.numPanel__numeric(data-count="422") 0
+					p.numPanel__text.text On Going Project
+				.numPanel__item
+					.numPanel__val 
+						span.numPanel__numeric(data-count="698") 0
 						span +
-					p.numItem__text.text Happy Client
-				.about__numItem.numItem
-					.numItem__val 
-						span.numItem__valNum 100
+					p.numPanel__text.text Happy Client
+				.numPanel__item
+					.numPanel__val 
+						span.numPanel__numeric(data-count="100") 0
 						span %
-					p.numItem__text.text Positive Feedback
+					p.numPanel__text.text Positive Feedback
