--- a/dev/main/blocks/form/form.pug
+++ b/dev/main/blocks/form/form.pug
@@ -20,14 +20,13 @@
 				"icon": "load"
 			})(class = "form__btn btn_color_main btn_textTransform" type="submit" id="contactFormBtn")
 		.contactBlock__callback.callback#callback
-			.callback__wrap.callback__wrap_success
+			.callback__wrap
 				.callback__item.callback__item_success
 					button.callback__closeBtn.closeBtn Close pop up
 					p.callback__title Thank you! 
 					p.callback__text You order is accepted
 					span.callback__icon
 						+icon('success', 'callback__icon_color_succsess')
-			.callback__wrap.callback__wrap_error
 				.callback__item.callback__item_error
 					button.callback__closeBtn.closeBtn Close pop up
 					p.callback__title Sorry, something went wrong 
