--- a/dev/main/modules/footer/_footer.sass
+++ b/dev/main/modules/footer/_footer.sass
@@ -44,6 +44,11 @@
 		margin: 0 auto 1.7rem
 		border-radius: 50%
 		background-color: rgba(255, 255, 255, .1)
+		transition: .6s ease-in-out
+		&:hover,
+		&:focus
+			transform: scale(1.1)
+			outline: none
 	&__info
 		color: #fff
 .adress
