--- a/dev/main/modules/header/header.pug
+++ b/dev/main/modules/header/header.pug
@@ -7,7 +7,7 @@ header.header
 					img(src="static/img/general/logo.png", alt="Marvel")
 			.header__navPanel
 				.dropdown.header__dropdown
-					button.dropdown__btn
+					button.dropdown__btn(tabindex="1")
 						span.dropdown__label Open menu
 				+nav([
 				{
