--- a/dev/main/modules/menu/_menu.sass
+++ b/dev/main/modules/menu/_menu.sass
@@ -10,5 +10,7 @@
     +md-block
       +fontEm(14px)
       transition: .5s ease-in-out
-      &:hover
+      &:hover,
+      &:focus
         color: $mainColor
+        outline: none
