--- a/dev/main/blocks/gallery/_gallery.sass
+++ b/dev/main/blocks/gallery/_gallery.sass
@@ -158,3 +158,23 @@
     border: 1px solid $borderColor
     background-color: $mainColor
     cursor: pointer
+    &::before
+      content: ""
+      width: inherit
+      height: inherit
+      border-radius: 100%
+      position: absolute
+      top: 50%
+      left: 50%
+      transform: translate(-50%, -50%) scale(0.05)
+      z-index: -1
+      box-shadow: 0px 0px 0px 6px $mainColor
+      opacity: 1
+      transition: all 1s
+    &:hover,
+    &:focus
+      &::before
+        opacity: 0
+        transform: translate(-50%, -50%) scale(2)
+  //  &:hover,
+  //  &:focus
