--- a/dev/main/blocks/pricing/__plans/_plan.sass
+++ b/dev/main/blocks/pricing/__plans/_plan.sass
@@ -101,4 +101,24 @@
 		text-transform: capitalize
 		color: $textColorBlack
 		background-color: #fff
-	
+		position: relative
+		overflow: hidden
+		&::before
+			content: ""
+			position: absolute
+			top: 50%
+			left: 50%
+			transform: translate(-50%, -50%)
+			border-radius: 100%
+			width: 30.75rem
+			height: 30.75rem
+			opacity: .9
+			transition: box-shadow .6s ease-in-out, opacity 1.5s
+
+		  //z-index: -1
+
+		&:hover,
+		&:focus
+			&::before
+				box-shadow: inset 0 0 0 17rem $mainColor
+				opacity: 0
