--- a/dev/main/blocks/team/__members/member.pug
+++ b/dev/main/blocks/team/__members/member.pug
@@ -1,7 +1,7 @@
 mixin member(data)
 	each i in data
 		.team__memberWrap
-			.member.team__member
+			.member
 				.member__mainInfo
 					picture.member__img
 						source(srcset= i.img.srcset)
