--- a/dev/main/css/main.css
+++ b/dev/main/css/main.css
@@ -1248,6 +1248,22 @@ img.mfp-img {
     left: 50%;
     transform: translate(-50%, -50%);
     color: #fff; }
+  .closeBtn::after {
+    content: "";
+    width: inherit;
+    height: inherit;
+    border-radius: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.05);
+    z-index: -1;
+    box-shadow: 0px 0px 0px 6px #ffe400;
+    opacity: 1;
+    transition: all 1s; }
+  .closeBtn:hover::after, .closeBtn:focus::after {
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(2); }
 
 .icon {
   width: 100%;
@@ -1271,8 +1287,9 @@ img.mfp-img {
     width: 19px;
     height: 19px;
     transition: all .5s ease; }
-    .social__link:hover {
-      transform: scale(1.1); }
+    .social__link:hover, .social__link:focus {
+      transform: scale(1.1);
+      outline: none; }
 
 .nav {
   display: -ms-flexbox;
@@ -1288,8 +1305,9 @@ img.mfp-img {
       .nav__link {
         font-size: 0.875em;
         transition: .5s ease-in-out; }
-        .nav__link:hover {
-          color: #ffe400; } }
+        .nav__link:hover, .nav__link:focus {
+          color: #ffe400;
+          outline: none; } }
 
 .header {
   height: 80px;
@@ -1348,6 +1366,9 @@ img.mfp-img {
       opacity: 1; }
       .header__nav_active .nav__link {
         display: inline-block; }
+        .header__nav_active .nav__link:hover, .header__nav_active .nav__link:focus {
+          outline: none;
+          text-decoration: underline; }
     @media screen and (min-width: 960px) {
       .header__nav {
         width: 100%;
@@ -1366,14 +1387,11 @@ img.mfp-img {
 
 .dropdown {
   margin: 0 auto;
-  text-align: center; }
+  text-align: center;
+  padding-bottom: .3rem; }
   @media screen and (min-width: 960px) {
     .dropdown {
       display: none; } }
-  .dropdown__btn {
-    width: 36px;
-    height: 40px;
-    background: transparent; }
   .dropdown::before {
     content: "";
     display: block;
@@ -1386,8 +1404,16 @@ img.mfp-img {
     z-index: -1;
     border-radius: 50%;
     background-color: #ffe400;
-    box-shadow: 0px 0px 10px #fff;
+    border: 1px solid #fff;
+    box-shadow: 0px 0px 10px 0px #fff;
     transition: transform 0.3s cubic-bezier(0.04, -0.1, 0.29, 0.98), width 0.3s cubic-bezier(0.04, -0.1, 0.29, 0.98), height 0.3s cubic-bezier(0.04, -0.1, 0.29, 0.98); }
+  .dropdown__btn {
+    width: 36px;
+    height: 40px;
+    background: transparent;
+    transition: 1s; }
+    .dropdown__btn:focus {
+      transform: scale(1.08); }
   .dropdown__label, .dropdown__label::before, .dropdown__label::after {
     display: inline-block;
     width: 100%;
@@ -1432,14 +1458,14 @@ img.mfp-img {
   outline-color: rgba(0, 0, 0, 0.5);
   outline-offset: 0px;
   transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1); }
-  .btn:hover:enabled {
-    border: 1px solid;
+  .btn:hover:enabled, .btn:focus {
     outline: 1px solid;
     outline-color: transparent;
     outline-offset: 15px; }
   .btn_color_main {
     background-color: #ffe400;
-    color: #212121; }
+    color: #212121;
+    border: 1px solid #fff; }
   .btn_color_clear {
     border: solid 1px #444444;
     background-color: transparent; }
@@ -1644,7 +1670,11 @@ img.mfp-img {
   border: 1px solid #b7b7b7;
   margin: 0 auto 1.7rem;
   border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.1); }
+  background-color: rgba(255, 255, 255, 0.1);
+  transition: .6s ease-in-out; }
+  .phone__link:hover, .adress__link:hover, .phone__link:focus, .adress__link:focus {
+    transform: scale(1.1);
+    outline: none; }
 
 .phone__info, .adress__info {
   color: #fff; }
@@ -1785,10 +1815,6 @@ img.mfp-img {
       .about__numbers {
         padding-left: 15px;
         padding-right: 15px; } }
-  .about__numItem {
-    -ms-flex: 1 183px;
-        flex: 1 183px;
-    margin-bottom: 2rem; }
   .about__numTitle {
     margin-bottom: 3.83em;
     text-transform: uppercase; }
@@ -1866,11 +1892,14 @@ img.mfp-img {
   -ms-flex-pack: justify;
       justify-content: space-between;
   padding: 0 1.25rem 0 2.25rem; }
-
-.numItem__val {
-  font-family: Montserrat-Bold, Arial, sans-serif;
-  font-size: 2.875em;
-  margin-bottom: 0.15em; }
+  .numPanel__item {
+    -ms-flex: 1 183px;
+        flex: 1 183px;
+    margin-bottom: 2rem; }
+  .numPanel__val {
+    font-family: Montserrat-Bold, Arial, sans-serif;
+    font-size: 2.875em;
+    margin-bottom: 0.15em; }
 
 .purchase {
   background-color: #fafafa; }
@@ -2171,6 +2200,22 @@ img.mfp-img {
     border: 1px solid #b7b7b7;
     background-color: #ffe400;
     cursor: pointer; }
+    .portfolioPrev__btn::before {
+      content: "";
+      width: inherit;
+      height: inherit;
+      border-radius: 100%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) scale(0.05);
+      z-index: -1;
+      box-shadow: 0px 0px 0px 6px #ffe400;
+      opacity: 1;
+      transition: all 1s; }
+    .portfolioPrev__btn:hover::before, .portfolioPrev__btn:focus::before {
+      opacity: 0;
+      transform: translate(-50%, -50%) scale(2); }
 
 .portfolioItem {
   font-size: .5rem;
@@ -2502,7 +2547,23 @@ img.mfp-img {
     font-family: Montserrat-Bold, Arial, sans-serif;
     text-transform: capitalize;
     color: #444444;
-    background-color: #fff; }
+    background-color: #fff;
+    position: relative;
+    overflow: hidden; }
+    .plan__btn::before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 100%;
+      width: 30.75rem;
+      height: 30.75rem;
+      opacity: .9;
+      transition: box-shadow 0.6s ease-in-out, opacity 1.5s; }
+    .plan__btn:hover::before, .plan__btn:focus::before {
+      box-shadow: inset 0 0 0 17rem #ffe400;
+      opacity: 0; }
 
 .team {
   padding: 7.8125rem 0 8.75rem 0; }
@@ -2532,91 +2593,73 @@ img.mfp-img {
     @media screen and (min-width: 960px) {
       .team__memberWrap {
         width: calc(33.33333% - 30px); } }
-    .team__memberWrap:hover .member {
-      transform: rotateX(90deg); }
   .team__member {
     width: 100%;
     height: 100%;
-    position: relative;
-    transform-origin: 50% 50%;
-    transform-style: preserve-3d;
-    transition: .4s all; }
-    .team__member .member {
-      width: 100%;
-      height: 100%;
-      transform: rotateX(0deg) translate3d(0px, 0px, 247px); }
-      .team__member .member__mainInfo {
-        position: absolute; }
-      .team__member .member__details {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        transform: rotateX(-90deg) translate3d(0px, 0px, 247px); }
+    position: relative; }
 
-.member__text {
-  padding: 0 1.5em 0 1.5em;
-  background-color: #ebebeb; }
-
-.member__infoItem {
-  display: block;
-  padding: 1.375rem 0 1.375rem 0;
-  text-align: center; }
-
-.member__infoItem:not(:last-child) {
-  border-bottom: 1px dashed #b7b7b7; }
-
-.member__position {
-  font-size: 0.6875em; }
-
-.member__img {
-  display: block;
-  margin-bottom: 8px; }
-
-.member img {
-  width: 100%;
-  height: auto; }
-
-.member__details {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-direction: column;
-      flex-direction: column;
-  padding: 4em 1.5em 0 1.5em;
-  box-sizing: border-box;
-  font-size: .9rem;
-  text-align: center;
-  background-color: #ffe400;
-  color: #000; }
-  @media screen and (min-width: 560px) {
-    .member__details {
-      font-size: 1rem; } }
-  @media screen and (min-width: 780px) {
-    .member__details {
-      padding-top: 6em; } }
-
-.member__detailsName, .member__detailsPos {
-  margin-bottom: 0.71em;
-  font-family: Montserrat-Bold, Arial, sans-serif;
-  font-size: 1.5em;
-  font-weight: bold;
-  text-transform: uppercase; }
-
-.member__detailsPos {
-  font-size: 1em; }
-
-.member__detailsText {
-  margin: auto;
-  padding: 0 0.875em;
-  font-family: Muli, Arial, sans-serif;
-  line-height: 1.75;
-  font-size: 0.875em; }
-
-.member__detailsSocial {
-  padding: 2.5rem 2% 3.125rem;
-  border-top: 1px dashed #b7b7b7; }
-
-.member__socialLink {
-  fill: rgba(0, 0, 0, 0.5); }
+.member {
+  position: relative; }
+  .member__text {
+    padding: 0 1.5em 0 1.5em;
+    background-color: #ebebeb; }
+  .member__infoItem {
+    display: block;
+    padding: 1.375rem 0 1.375rem 0;
+    text-align: center; }
+  .member__infoItem:not(:last-child) {
+    border-bottom: 1px dashed #b7b7b7; }
+  .member__position {
+    font-size: 0.6875em; }
+  .member__img {
+    display: block;
+    margin-bottom: 8px; }
+  .member img {
+    width: 100%;
+    height: auto; }
+  .member__details {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+        flex-direction: column;
+    padding: 4em 1.5em 0 1.5em;
+    box-sizing: border-box;
+    font-size: .9rem;
+    text-align: center;
+    background-color: #ffe400;
+    color: #000; }
+    @media screen and (min-width: 560px) {
+      .member__details {
+        font-size: 1rem; } }
+    @media screen and (min-width: 780px) {
+      .member__details {
+        padding-top: 6em; } }
+  .member__detailsName, .member__detailsPos {
+    margin-bottom: 0.71em;
+    font-family: Montserrat-Bold, Arial, sans-serif;
+    font-size: 1.5em;
+    font-weight: bold;
+    text-transform: uppercase; }
+  .member__detailsPos {
+    font-size: 1em; }
+  .member__detailsText {
+    margin: auto;
+    padding: 0 0.875em;
+    font-family: Muli, Arial, sans-serif;
+    line-height: 1.75;
+    font-size: 0.875em; }
+  .member__detailsSocial {
+    padding: 2.5rem 2% 3.125rem;
+    border-top: 1px dashed #b7b7b7; }
+  .member__socialLink {
+    fill: rgba(0, 0, 0, 0.5); }
 
 .contactBlock {
   padding: 7.5rem 0 8.125rem 0;
@@ -2669,26 +2712,27 @@ img.mfp-img {
   margin-left: 15px;
   margin-right: 15px;
   width: calc(100% - 30px);
-  min-height: 18rem;
+  height: 18rem;
   margin-bottom: 1.1rem; }
+  @media screen and (min-width: 780px) {
+    .form__fieldTextarea {
+      min-height: 31.8125rem; } }
 
 .form__textarea {
   width: 100%;
   height: 100%;
   overflow: auto; }
-  @media screen and (min-width: 780px) {
-    .form__textarea {
-      min-height: 31.8125rem; } }
 
 .form__input {
   display: inline-block;
   width: 100%; }
 
 .form__input, .form__textarea {
-  padding: 1.4375rem 0 1.3125rem 1.25rem;
+  padding: 1.4375rem 1.25rem 1.3125rem 1.25rem;
   border: 1px solid #b7b7b7;
   font-family: Muli, Arial, sans-serif; }
   .form__input:focus, .form__textarea:focus {
+    border-color: #ffe400;
     outline: 2px solid #ffe400; }
 
 .form__input:-ms-input-placeholder, .form__textarea:-ms-input-placeholder {
@@ -2734,15 +2778,19 @@ img.mfp-img {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(0.005);
   font-family: Montserrat-Bold, Arial, sans-serif;
   font-size: 1.25rem;
   background-color: #fff;
-  text-align: center; }
+  text-align: center;
+  transition: 1s;
+  display: none; }
   .callback__item_success {
     border: 1px solid #ffe400; }
   .callback__item_error {
     border: 1px solid #d9534f; }
+  .callback__item_visible {
+    transform: translate(-50%, -50%) scale(1); }
 
 .callback__closeBtn {
   position: absolute;
@@ -2755,6 +2803,12 @@ img.mfp-img {
 
 .callback__text {
   margin-bottom: .8em; }
+
+@keyframes scale {
+  0% {
+    transform: scale(0.005); }
+  100% {
+    transform: scale(1); } }
 
 .error {
   color: #B84747; }
