--- a/dev/main/modules/button/_button.sass
+++ b/dev/main/modules/button/_button.sass
@@ -10,16 +10,21 @@
 	outline-color: rgba(0, 0, 0, .5)
 	outline-offset: 0px
 	transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1)
-	&:hover:enabled
-		border: 1px solid
+	&:hover:enabled,
+	&:focus
 		outline: 1px solid
 		outline-color: rgba(0, 0, 0, 0)
 		outline-offset: 15px
+
+
+
 
 	&_color
 		&_main
 			background-color: $mainColor
 			color: $mainColorBlack
+			border: 1px solid #fff
+			//box-shadow: 0px 0px 20px 6px #fff
 		&_clear
 			border: solid 1px #444444
 			background-color: transparent
