--- a/dev/main/sass/_common_styles.sass
+++ b/dev/main/sass/_common_styles.sass
@@ -45,6 +45,24 @@
 		left: 50%
 		transform: translate(-50%, -50%)
 		color: #fff
+	&::after
+		content: ""
+		width: inherit
+		height: inherit
+		border-radius: 100%
+		position: absolute
+		top: 50%
+		left: 50%
+		transform: translate(-50%, -50%) scale(0.05)
+		z-index: -1
+		box-shadow: 0px 0px 0px 6px $mainColor
+		opacity: 1
+		transition: all 1s
+	&:hover,
+	&:focus
+		&::after
+			opacity: 0
+			transform: translate(-50%, -50%) scale(2)
 .icon
 	width: 100%
 	height: 100%
@@ -61,7 +79,7 @@
 		width: 19px
 		height: 19px
 		transition: all .5s ease
-		&:hover
+		&:hover,
+		&:focus
 			transform: scale(1.1)
-	// 	box-shadow: 0 0 15px #3b5998
-	// 	transition: all .5s ease
+			outline: none
